# code-scanner

.github/workflows/: code-scanner-ci.yml
code-scanner/: .env.example  .gitignore  README.md  pyproject.toml
code-scanner/configs/: config.example.json  default_rules.json  github-public-test.json  github-single-public.example.json  local-multi.example.json
code-scanner/src/code_scanner/: __init__.py  cli.py  config.py  db.py  http.py  models.py  pipeline.py  repo_sync.py  reporting.py
code-scanner/src/code_scanner.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
code-scanner/src/code_scanner/providers/: __init__.py  base.py  bitbucket_cloud.py  bitbucket_server.py  github.py  local.py
code-scanner/src/code_scanner/scanners/: __init__.py  engine.py  java_structured.py  js_ts_structured.py  notebooks.py  polyglot_patterns.py  python_ast.py  rules.py
code-scanner/tests/: test_config.py  test_db.py  test_github_provider.py  test_scanners.py
easy-local-scanner/: .gitignore  README.md  pyproject.toml
easy-local-scanner/configs/: rules.json
easy-local-scanner/src/easy_local_scanner/: __init__.py  cli.py  db.py  models.py  report.py  rules.py  scanner.py
easy-local-scanner/tests/: test_cli_e2e.py  test_rules.py  test_scanner.py
easy-local-scanner/tests/sample_repo/: model.py
