[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "easy-local-scanner"
version = "0.1.0"
description = "Simple local-only code scanner for learning and extension"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
easy-scan = "easy_local_scanner.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
